--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-page-creator": "^4.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-source-filesystem": "^4.0.0",
     "react": "^17.0.1",
