--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gatsby": "^4.0.0",
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-mdx": "^3.0.0",
+    "gatsby-plugin-netlify-cms": "^6.0.0",
     "gatsby-plugin-page-creator": "^4.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
+    "netlify-cms-app": "^2.15.57",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
