--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby-plugin-page-creator": "^4.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "netlify-cms-app": "^2.15.57",
     "react": "^17.0.1",
